testdata/golden/sema/invalid/int_literal_range_call.fmt
fn f(i: int8) { }

@entrypoint
fn main() -> int {
    f(1000);
    return 0;
}
